Use +4 cards on stable home and ribs PNGs only in Asado mode
Made-with: Cursor

--- a/index.html
+++ b/index.html
@@ -576,10 +576,10 @@
   <div id="home" class="screen active">
     <div>
       <div class="uno-cards">
-        <div class="uno-card-mini" style="--rot:-8deg;"><img src="assets/image-9bf8c041-0dcc-4664-a43d-b08c00b056a6.png" alt="" width="240" height="348"></div>
-        <div class="uno-card-mini" style="--rot:-3deg;"><img src="assets/image-f89188ae-0fab-4b0d-906f-3d074070604c.png" alt="" width="240" height="348"></div>
-        <div class="uno-card-mini" style="--rot:3deg;"><img src="assets/image-9f0bc4e9-7a6e-4737-8f3d-94efcbed10d2.png" alt="" width="240" height="348"></div>
-        <div class="uno-card-mini" style="--rot:8deg;"><img src="assets/image-6203ef81-62d7-487c-9967-86da2115146f.png" alt="" width="240" height="348"></div>
+        <div class="uno-card-mini" style="--rot:-8deg;"><img src="assets/uno-plus4.png" alt="+4" width="240" height="348"></div>
+        <div class="uno-card-mini" style="--rot:-3deg;"><img src="assets/uno-plus4.png" alt="+4" width="240" height="348"></div>
+        <div class="uno-card-mini" style="--rot:3deg;"><img src="assets/uno-plus4.png" alt="+4" width="240" height="348"></div>
+        <div class="uno-card-mini" style="--rot:8deg;"><img src="assets/uno-plus4.png" alt="+4" width="240" height="348"></div>
       </div>
       <h1 class="logo-title">Lunes de UNO</h1>
       <p class="logo-sub" data-i18n="home_sub"></p>
