Use transparent asado PNGs; remove old rib images
Made-with: Cursor

--- a/index2.html
+++ b/index2.html
@@ -649,6 +649,7 @@
       filter: drop-shadow(0 2px 6px rgba(0,0,0,.4));
       max-width: 120px;
       height: auto;
+      background: transparent;
     }
     @keyframes meatFly {
       0% {
@@ -2360,13 +2361,13 @@ let asadoMode = false;
 let originalCarouselMsgs = null;
 let meatInterval = null;
 const ASADO_IMAGES = [
-  'assets/image-9bf8c041-0dcc-4664-a43d-b08c00b056a6.png',
-  'assets/image-f89188ae-0fab-4b0d-906f-3d074070604c.png',
-  'assets/image-9f0bc4e9-7a6e-4737-8f3d-94efcbed10d2.png',
-  'assets/image-6203ef81-62d7-487c-9967-86da2115146f.png',
-  'assets/image-93c33789-9afd-43c2-b3e3-1c1bc4fc3b59.png',
-  'assets/image-806503c2-fa15-447a-8ca7-6cbcccb02136.png',
-  'assets/image-3683c8ad-4a76-418c-ab0e-1bbbc360b46e.png',
+  'assets/image-1cec047c-2204-4f4f-9954-419f7c1774d0.png',
+  'assets/image-64c59a6f-c9d4-47a9-9663-48336dd81f5b.png',
+  'assets/image-50beb5db-594f-4eb3-98f7-ab4301da9365.png',
+  'assets/image-98020a15-ad43-43af-8d31-d3d59b289066.png',
+  'assets/image-b0867c9d-6a8c-4794-b634-724797c38bd0.png',
+  'assets/image-d8b1829c-28cd-4ba4-8701-74d669afedf3.png',
+  'assets/image-bdae4363-a3f7-4ec9-8776-9e7aed39fe3c.png',
 ];
 
 function spawnFlyingMeat() {
